增加调试支持

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,6 @@
   <body>
     <h2>mortise lib</h2>
     <div id="divCustomId">hello world</div>
-    <script defer src="./bundle.js">
-    </script>
+  <button id="btnsetCustomId">setCustomId</button>
   </body>
 </html>
