移除clean-webpack-plugin

--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,10 @@
     <title>Document</title>
   </head>
   <body>
-    <h2>mortise lib</h2>
-    <div id="divCustomId">hello world</div>
-  <button id="btnsetCustomId">setCustomId</button>
+    <div id="root">
+      <h2>mortise lib</h2>
+      <div id="divCustomId">hello world</div>
+      <button id="btnsetCustomId">setCustomId Test</button>
+    </div>
   </body>
 </html>
