--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,15 @@
   </head>
   <body>
     <div id="root">
-      <h2>mortise lib</h2>
+      <h2>hello mortise lib</h2>
       <div id="divCustomId">hello world</div>
-      <button id="btnsetCustomId">setCustomId Test</button>
+      <button id="btnsetCustomId">setCustomId Test</button><br />
+      <button id="btngetUrl">getUrl Test</button><br />
+      <button id="btngetTitle">getTitle Test</button><br />
+      <input id="txtValue" value="hello world" />
+      <button id="btngetValue">getValue Test</button><br />
+      <button id="btnisVisible">isVisible Test</button><br />
+      <button id="btngetFrameIndex">getFrameIndex Test</button>
     </div>
   </body>
 </html>
