--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,8 @@
       <input id="txtValue" value="hello world" />
       <button id="btngetValue">getValue Test</button><br />
       <button id="btnisVisible">isVisible Test</button><br />
-      <button id="btngetFrameIndex">getFrameIndex Test</button>
+      <button id="btngetFrameIndex">getFrameIndex Test</button><br />
+      <button id="btngetPadding">getPadding Test</button><br />
     </div>
   </body>
 </html>
